# python-myLogger

./: README.md  pyproject.toml
src/myLogger/: __init__.py  myLogger.py
test/: simple.py
