[project]
name = "python-mylogger"
version = "0.0.1"
description = "Save and output information to the log"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/clgsru/python-myLogger"
"Bug Tracker" = "https://github.com/clgsru/python-myLogger/issues"